--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ body {
     background-color: rgb(147, 147, 187);
     overflow-y: scroll;
 }
+
+@media only screen and (max-width:768px) {
+    .getter {
+        height: calc(100vh - 66.8px - 76px + 20px);
+    }
+}
