--- a/style.css
+++ b/style.css
@@ -57,6 +57,6 @@ body {
 
 @media only screen and (max-width:768px) {
     .getter {
-        height: calc(100vh - 66.8px - 76px + 20px);
+        height: calc(100vh - 66.8px - 76px - 40px);
     }
 }
